AS/AS-TP-2014-files/AS-TP-2014-files/_build/arithpar.automaton
State 0:
start' -> . start [ # ]
-- On VAR shift to state 1
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On stmts_inner shift to state 44
-- On stmts shift to state 45
-- On stmt shift to state 47
-- On start shift to state 53
-- On expr shift to state 54
-- On EOF reduce production stmts_inner -> 

State 1:
expr -> VAR . [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE AND ]
expr -> VAR . CO expr CF [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE AND ]
stmt -> VAR . AFFECT expr [ SEMI EOF ]
-- On CO shift to state 2
-- On AFFECT shift to state 42
-- On TIMES reduce production expr -> VAR 
-- On PLUS reduce production expr -> VAR 
-- On OR reduce production expr -> VAR 
-- On NEQ reduce production expr -> VAR 
-- On MINUS reduce production expr -> VAR 
-- On LT reduce production expr -> VAR 
-- On LEQ reduce production expr -> VAR 
-- On GT reduce production expr -> VAR 
-- On GEQ reduce production expr -> VAR 
-- On EQ reduce production expr -> VAR 
-- On EOF reduce production expr -> VAR 
-- On DIVIDE reduce production expr -> VAR 
-- On AND reduce production expr -> VAR 

State 2:
expr -> VAR CO . expr CF [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 40

State 3:
expr -> VAR . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> VAR . CO expr CF [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On CO shift to state 2
-- On TIMES reduce production expr -> VAR 
-- On SEMI reduce production expr -> VAR 
-- On PLUS reduce production expr -> VAR 
-- On PF reduce production expr -> VAR 
-- On OR reduce production expr -> VAR 
-- On NEQ reduce production expr -> VAR 
-- On MINUS reduce production expr -> VAR 
-- On LT reduce production expr -> VAR 
-- On LEQ reduce production expr -> VAR 
-- On GT reduce production expr -> VAR 
-- On GEQ reduce production expr -> VAR 
-- On EQ reduce production expr -> VAR 
-- On EOF reduce production expr -> VAR 
-- On DIVIDE reduce production expr -> VAR 
-- On CF reduce production expr -> VAR 
-- On AND reduce production expr -> VAR 

State 4:
expr -> TRUE . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> TRUE 
-- On SEMI reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On PF reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On MINUS reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LEQ reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GEQ reduce production expr -> TRUE 
-- On EQ reduce production expr -> TRUE 
-- On EOF reduce production expr -> TRUE 
-- On DIVIDE reduce production expr -> TRUE 
-- On CF reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 

State 5:
expr -> STRING . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> STRING 
-- On SEMI reduce production expr -> STRING 
-- On PLUS reduce production expr -> STRING 
-- On PF reduce production expr -> STRING 
-- On OR reduce production expr -> STRING 
-- On NEQ reduce production expr -> STRING 
-- On MINUS reduce production expr -> STRING 
-- On LT reduce production expr -> STRING 
-- On LEQ reduce production expr -> STRING 
-- On GT reduce production expr -> STRING 
-- On GEQ reduce production expr -> STRING 
-- On EQ reduce production expr -> STRING 
-- On EOF reduce production expr -> STRING 
-- On DIVIDE reduce production expr -> STRING 
-- On CF reduce production expr -> STRING 
-- On AND reduce production expr -> STRING 

State 6:
expr -> PO . expr PF [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 14

State 7:
expr -> NOT . expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 13

State 8:
expr -> MINUS . expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 12

State 9:
expr -> INT . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> INT 
-- On SEMI reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On PF reduce production expr -> INT 
-- On OR reduce production expr -> INT 
-- On NEQ reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On LT reduce production expr -> INT 
-- On LEQ reduce production expr -> INT 
-- On GT reduce production expr -> INT 
-- On GEQ reduce production expr -> INT 
-- On EQ reduce production expr -> INT 
-- On EOF reduce production expr -> INT 
-- On DIVIDE reduce production expr -> INT 
-- On CF reduce production expr -> INT 
-- On AND reduce production expr -> INT 

State 10:
expr -> FLOAT . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> FLOAT 
-- On SEMI reduce production expr -> FLOAT 
-- On PLUS reduce production expr -> FLOAT 
-- On PF reduce production expr -> FLOAT 
-- On OR reduce production expr -> FLOAT 
-- On NEQ reduce production expr -> FLOAT 
-- On MINUS reduce production expr -> FLOAT 
-- On LT reduce production expr -> FLOAT 
-- On LEQ reduce production expr -> FLOAT 
-- On GT reduce production expr -> FLOAT 
-- On GEQ reduce production expr -> FLOAT 
-- On EQ reduce production expr -> FLOAT 
-- On EOF reduce production expr -> FLOAT 
-- On DIVIDE reduce production expr -> FLOAT 
-- On CF reduce production expr -> FLOAT 
-- On AND reduce production expr -> FLOAT 

State 11:
expr -> FALSE . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> FALSE 
-- On SEMI reduce production expr -> FALSE 
-- On PLUS reduce production expr -> FALSE 
-- On PF reduce production expr -> FALSE 
-- On OR reduce production expr -> FALSE 
-- On NEQ reduce production expr -> FALSE 
-- On MINUS reduce production expr -> FALSE 
-- On LT reduce production expr -> FALSE 
-- On LEQ reduce production expr -> FALSE 
-- On GT reduce production expr -> FALSE 
-- On GEQ reduce production expr -> FALSE 
-- On EQ reduce production expr -> FALSE 
-- On EOF reduce production expr -> FALSE 
-- On DIVIDE reduce production expr -> FALSE 
-- On CF reduce production expr -> FALSE 
-- On AND reduce production expr -> FALSE 

State 12:
expr -> expr . PLUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . TIMES expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . MINUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . EQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . NEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . AND expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . OR expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> MINUS expr . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> MINUS expr 
-- On SEMI reduce production expr -> MINUS expr 
-- On PLUS reduce production expr -> MINUS expr 
-- On PF reduce production expr -> MINUS expr 
-- On OR reduce production expr -> MINUS expr 
-- On NEQ reduce production expr -> MINUS expr 
-- On MINUS reduce production expr -> MINUS expr 
-- On LT reduce production expr -> MINUS expr 
-- On LEQ reduce production expr -> MINUS expr 
-- On GT reduce production expr -> MINUS expr 
-- On GEQ reduce production expr -> MINUS expr 
-- On EQ reduce production expr -> MINUS expr 
-- On EOF reduce production expr -> MINUS expr 
-- On DIVIDE reduce production expr -> MINUS expr 
-- On CF reduce production expr -> MINUS expr 
-- On AND reduce production expr -> MINUS expr 

State 13:
expr -> expr . PLUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . TIMES expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . MINUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . EQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . NEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . AND expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . OR expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> NOT expr . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> NOT expr 
-- On SEMI reduce production expr -> NOT expr 
-- On PLUS reduce production expr -> NOT expr 
-- On PF reduce production expr -> NOT expr 
-- On OR reduce production expr -> NOT expr 
-- On NEQ reduce production expr -> NOT expr 
-- On MINUS reduce production expr -> NOT expr 
-- On LT reduce production expr -> NOT expr 
-- On LEQ reduce production expr -> NOT expr 
-- On GT reduce production expr -> NOT expr 
-- On GEQ reduce production expr -> NOT expr 
-- On EQ reduce production expr -> NOT expr 
-- On EOF reduce production expr -> NOT expr 
-- On DIVIDE reduce production expr -> NOT expr 
-- On CF reduce production expr -> NOT expr 
-- On AND reduce production expr -> NOT expr 

State 14:
expr -> expr . PLUS expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . TIMES expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . MINUS expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . DIVIDE expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . EQ expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . NEQ expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . LT expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . GT expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . LEQ expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . GEQ expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . AND expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> expr . OR expr [ TIMES PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE AND ]
expr -> PO expr . PF [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES shift to state 15
-- On PLUS shift to state 17
-- On PF shift to state 21
-- On OR shift to state 22
-- On NEQ shift to state 24
-- On MINUS shift to state 26
-- On LT shift to state 28
-- On LEQ shift to state 30
-- On GT shift to state 32
-- On GEQ shift to state 34
-- On EQ shift to state 36
-- On DIVIDE shift to state 19
-- On AND shift to state 38

State 15:
expr -> expr TIMES . expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 16

State 16:
expr -> expr . PLUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . TIMES expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr TIMES expr . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . MINUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . EQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . NEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . AND expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . OR expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> expr TIMES expr 
-- On SEMI reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On PF reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GEQ reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On EOF reduce production expr -> expr TIMES expr 
-- On DIVIDE reduce production expr -> expr TIMES expr 
-- On CF reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 

State 17:
expr -> expr PLUS . expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 18

State 18:
expr -> expr . PLUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr PLUS expr . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . TIMES expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . MINUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . EQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . NEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . AND expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . OR expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES shift to state 15
-- On DIVIDE shift to state 19
-- On SEMI reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On PF reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LEQ reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GEQ reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On CF reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 19:
expr -> expr DIVIDE . expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 20

State 20:
expr -> expr . PLUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . TIMES expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . MINUS expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . DIVIDE expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr DIVIDE expr . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . EQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . NEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GT expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . LEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . GEQ expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . AND expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
expr -> expr . OR expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> expr DIVIDE expr 
-- On SEMI reduce production expr -> expr DIVIDE expr 
-- On PLUS reduce production expr -> expr DIVIDE expr 
-- On PF reduce production expr -> expr DIVIDE expr 
-- On OR reduce production expr -> expr DIVIDE expr 
-- On NEQ reduce production expr -> expr DIVIDE expr 
-- On MINUS reduce production expr -> expr DIVIDE expr 
-- On LT reduce production expr -> expr DIVIDE expr 
-- On LEQ reduce production expr -> expr DIVIDE expr 
-- On GT reduce production expr -> expr DIVIDE expr 
-- On GEQ reduce production expr -> expr DIVIDE expr 
-- On EQ reduce production expr -> expr DIVIDE expr 
-- On EOF reduce production expr -> expr DIVIDE expr 
-- On DIVIDE reduce production expr -> expr DIVIDE expr 
-- On CF reduce production expr -> expr DIVIDE expr 
-- On AND reduce production expr -> expr DIVIDE expr 

State 21:
expr -> PO expr PF . [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On TIMES reduce production expr -> PO expr PF 
-- On SEMI reduce production expr -> PO expr PF 
-- On PLUS reduce production expr -> PO expr PF 
-- On PF reduce production expr -> PO expr PF 
-- On OR reduce production expr -> PO expr PF 
-- On NEQ reduce production expr -> PO expr PF 
-- On MINUS reduce production expr -> PO expr PF 
-- On LT reduce production expr -> PO expr PF 
-- On LEQ reduce production expr -> PO expr PF 
-- On GT reduce production expr -> PO expr PF 
-- On GEQ reduce production expr -> PO expr PF 
-- On EQ reduce production expr -> PO expr PF 
-- On EOF reduce production expr -> PO expr PF 
-- On DIVIDE reduce production expr -> PO expr PF 
-- On CF reduce production expr -> PO expr PF 
-- On AND reduce production expr -> PO expr PF 

State 22:
expr -> expr OR . expr [ TIMES SEMI PLUS PF OR NEQ MINUS LT LEQ GT GEQ EQ EOF DIVIDE CF AND ]
-- On VAR shift to state 3
-- On TRUE shift to state 4
-- On STRING shift to state 5
-- On PO shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 23
